crates/ars-components/src/input/file_trigger/snapshots/ars_components__input__file_trigger__tests__file_trigger_root_snapshot.snap
---
source: crates/ars-components/src/input/file_trigger/mod.rs
expression: "snapshot_attrs(&api(Props::new().id(\"files\")).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "file-trigger",
            ),
        ),
        (
            Id,
            String(
                "files",
            ),
        ),
    ],
    styles: [],
}
